@@ -11,6 +11,7 @@ DEFINES += QUICK_TEST_SOURCE_DIR=\"\\\"$$PWD\\\"\"
 OTHER_FILES += \
     DesktopWebView/tst_properties.qml \
     DesktopWebView/tst_navigationPolicyForUrl.qml \
+    DesktopWebView/tst_loadZeroSizeView.qml \
     DesktopWebView/tst_loadProgress.qml \
     DesktopWebView/tst_loadProgressSignal.qml \
     DesktopWebView/tst_linkHovered.qml \
