@@ -1,3 +1,15 @@
+2011-09-27  Gopal Raghavan  <gopal.1.raghavan@nokia.com>
+
+        [Qt] QDesktopWebView load zero size view test missing
+        https://bugs.webkit.org/show_bug.cgi?id=68655
+
+        Reviewed by Chang Shu.
+
+        Added test case to check load behavior with zero size view.
+
+        * UIProcess/API/qt/tests/qmltests/DesktopWebView/tst_loadZeroSizeView.qml: Added.
+        * UIProcess/API/qt/tests/qmltests/qmltests.pro:
+
 2011-09-27  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Use WebKitWebContext in WebKitWebView
